<resources>
    <string name="app_name">Card Games</string>
    <string name="welcome">Welcome to the games room!</string>
    <string name="highCard">Higher or Lower?</string>
    <string name="title">Welcome to the games room!</string>
    <string name="dealer">Dealers card</string>
    <string name="player">Your Card</string>
    <string name="high_card_draw_button">Draw</string>
    <string name="reset_deck_button">Reset Deck</string>
    <string name="startHighCard">Press draw to start the game</string>
    <string name="blackjack">Blackjack</string>
    <string name="blackJackDraw">Draw</string>
    <string name="stick">Stick</string>
    <string name="twist">Twist</string>
    <string name="cardCount">Card Count</string>
    <string name="cardCountHint">Answer here!</string>
    <string name="cardCountDraw">Draw</string>
    <string name="cardCountAnswer">Answer</string>
    <string name="cardCountRules">The rules are simple. Press the draw button and you will see the card values for 2 seconds. Count them up and answer in the box below. Remember that all face cards count as 10 and Ace counts as one!</string>
    <string name="cardCountScore">Score</string>
    <string name="AHLdeal">Deal</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="rage">Rage</string>
    <string name="highLowScore">Your score</string>
    <string name="welcomeCardCount">Card count</string>
</resources>
