<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.simonanger.cardgames.HighCardGameActivity"
    android:background="@drawable/tablefelt">

    <TextView
        android:id="@+id/playerCardRankTextView"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/playersCardImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/playersCardImage"
        app:layout_constraintRight_toRightOf="@+id/playersCardImage"
        app:layout_constraintTop_toTopOf="@+id/playersCardImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/playerCardRankTextView"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/playersCardImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/playersCardImage"
        app:layout_constraintRight_toRightOf="@+id/playersCardImage"
        app:layout_constraintTop_toTopOf="@+id/playersCardImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dealerCardRankTextView"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/dealersCardImage"
        app:layout_constraintLeft_toLeftOf="@+id/dealersCardImage" />

    <TextView
        android:id="@+id/dealerCardRankTextView"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/dealersCardImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/dealersCardImage"
        app:layout_constraintRight_toRightOf="@+id/dealersCardImage"
        app:layout_constraintTop_toTopOf="@+id/dealersCardImage"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="223dp" />

    <TextView
        android:id="@+id/playersCardText"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/player"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playersCardImage"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/dealersCardText"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dealer"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playersCardImage"
        android:layout_width="85dp"
        android:layout_height="107dp"
        app:srcCompat="@drawable/cardback"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/highCardDrawButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <ImageView
        android:id="@+id/dealersCardImage"
        android:layout_width="85dp"
        android:layout_height="107dp"
        app:srcCompat="@drawable/cardback"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/dealersCardText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/highCardDrawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_card_draw_button"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/resetDeckButton"
        android:layout_width="66dp"
        android:layout_height="38dp"
        android:padding="0dp"
        android:text="@string/reset_deck_button"
        android:textSize="10sp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="132dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealersCardImage" />

</android.support.constraint.ConstraintLayout>
