<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.simonanger.cardgames.AdvancedHighLowActivity"
    android:background="@drawable/tablefelt2">

    <Button
        android:id="@+id/advancedHLButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAdvancedHLClicked"
        android:text="@string/AHLdeal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.562"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/highOrLowTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <Button
        android:id="@+id/aHLHigherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onDecisionButtonClicked"
        android:text="@string/higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        android:layout_marginLeft="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/advancedHLButton"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.516" />

    <Button
        android:id="@+id/aHLLowerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onDecisionButtonClicked"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="35dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/advancedHLButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/dealerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <ImageView
        android:id="@+id/playersCardImage"
        android:layout_width="116dp"
        android:layout_height="161dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/cardback"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/dealersCardImage"
        android:layout_width="116dp"
        android:layout_height="161dp"
        app:srcCompat="@drawable/cardback"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/playerCardTextUp"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/playersCardImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/playersCardImage"
        app:layout_constraintRight_toRightOf="@+id/playersCardImage"
        app:layout_constraintTop_toTopOf="@+id/playersCardImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/playerCardTextDown"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/playersCardImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/playersCardImage"
        app:layout_constraintRight_toRightOf="@+id/playersCardImage"
        app:layout_constraintTop_toTopOf="@+id/playersCardImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dealerCardTextDown"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/dealersCardImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/dealersCardImage"
        app:layout_constraintRight_toRightOf="@+id/dealersCardImage"
        app:layout_constraintTop_toTopOf="@+id/dealersCardImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dealerCardTextUp"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/dealersCardImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/dealersCardImage"
        app:layout_constraintRight_toRightOf="@+id/dealersCardImage"
        app:layout_constraintTop_toTopOf="@+id/dealersCardImage"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
